--- a/templates/pages/bugPage.html.twig
+++ b/templates/pages/bugPage.html.twig
@@ -75,7 +75,7 @@
         chose. Oh oui, je souffre déjà de symptômes de faiblesse et d'accomplir sa parole avec la fidélité rogue d'une chienne en folie. Oserai-je vraiment descendre sur la terre la plus détestable période de son existence, pas même
         un coup de patte. Libération anticipée dans la légalité ! Esclaves, obéissez en toutes choses. Machines avant un tiers, mais selon son importance. Excusez ma curiosité, en quête de quelque aventure.</p>
       </div>
-      <div class="col-lg-4"><button>Modifier l'article</button></div>
+      <div class="col-lg-4"><button class="btn btn-primary">Modifier l'article</button></div>
       <div class="col-lg-8"></div>
 
      </div>
@@ -99,8 +99,8 @@
         Autorisé, autorisé, c'est donc son état ?</p>
       </div>
       <div class="col-lg-12 bugPageBetweenSpaces">
-       <button>Modifier</button>
-       <button>Supprimer</button>
+       <button class="btn btn-primary">Modifier</button>
+       <button class="btn btn-primary">Supprimer</button>
       </div>
 
 
@@ -112,8 +112,8 @@
 
       </div>
       <div class="col-lg-12 bugPageBetweenSpaces">
-       <button>Modifier</button>
-       <button>Supprimer</button>
+       <button class="btn btn-primary">Modifier</button>
+       <button class="btn btn-primary">Supprimer</button>
       </div>
 
 
