--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -46,10 +46,10 @@
                                  <div class="col-lg-4">
                                      <div class="listing-item">
                                          <div class="left-image">
-                                             <a href="bugPage.html"><img src="assets/images/4975-dark-souls-bug.jpg" alt=""></a>
+                                             <a href="{{ path('bugPage') }}"><img src="assets/images/4975-dark-souls-bug.jpg" alt=""></a>
                                          </div>
                                          <div class="right-content align-self-center">
-                                             <a href="bugPage.html">
+                                             <a href="{{ path('bugPage') }}">
                                                  <h4>Titre bug 01</h4>
                                              </a>
                                              <h6>Lorem ipsum pour décorer</h6>
@@ -59,10 +59,10 @@
                                  <div class="col-lg-4">
                                      <div class="listing-item">
                                          <div class="left-image">
-                                             <a href="bugPage.html"><img src="assets/images/02-SNAKE.jpg" alt=""></a>
+                                             <a href="{{ path('bugPage') }}"><img src="assets/images/02-SNAKE.jpg" alt=""></a>
                                          </div>
                                          <div class="right-content align-self-center">
-                                             <a href="bugPage.html">
+                                             <a href="{{ path('bugPage') }}">
                                                  <h4>Titre bug 02</h4>
                                              </a>
                                              <h6>Lorem ipsum pour décorer</h6>
@@ -72,10 +72,10 @@
                                  <div class="col-lg-4">
                                      <div class="listing-item">
                                          <div class="left-image">
-                                             <a href="bugPage.html"><img src="assets/images/06-GIRAFFE-e1428672788656.gif" alt=""></a>
+                                             <a href="{{ path('bugPage') }}"><img src="assets/images/06-GIRAFFE-e1428672788656.gif" alt=""></a>
                                          </div>
                                          <div class="right-content align-self-center">
-                                             <a href="bugPage.html">
+                                             <a href="{{ path('bugPage') }}">
                                                  <h4>Titre bug 03</h4>
                                              </a>
                                              <h6>Lorem ipsum pour décorer</h6>
