--- a/templates/pages/searchBug.html.twig
+++ b/templates/pages/searchBug.html.twig
@@ -110,10 +110,10 @@
                                                         <div class="col-lg-4">
                                                             <div class="listing-item">
                                                                 <div class="left-image">
-                                                                    <a href="bugPage.html"><img src="assets/images/4975-dark-souls-bug.jpg" alt=""></a>
+                                                                    <a href="{{ path('bugPage') }}"><img src="assets/images/4975-dark-souls-bug.jpg" alt=""></a>
                                                                 </div>
                                                                 <div class="right-content align-self-center">
-                                                                    <a href="bugPage.html">
+                                                                    <a href="{{ path('bugPage') }}">
                                                                         <h4>Bug trouvé</h4>
                                                                     </a>
                                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ak incididunt ut labore et dolore magna aliqua.</p>
@@ -123,10 +123,10 @@
                                                         <div class="col-lg-4">
                                                             <div class="listing-item">
                                                                 <div class="left-image">
-                                                                    <a href="bugPage.html"><img src="assets/images/02-SNAKE.jpg" alt=""></a>
+                                                                    <a href="{{ path('bugPage') }}"><img src="assets/images/02-SNAKE.jpg" alt=""></a>
                                                                 </div>
                                                                 <div class="right-content align-self-center">
-                                                                    <a href="bugPage.html">
+                                                                    <a href="{{ path('bugPage') }}">
                                                                         <h4>Bug trouvé</h4>
                                                                     </a>
                                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ak incididunt ut labore et dolore magna aliqua.</p>
@@ -136,10 +136,10 @@
                                                         <div class="col-lg-4">
                                                             <div class="listing-item">
                                                                 <div class="left-image">
-                                                                    <a href="bugPage.html"><img src="assets/images/06-GIRAFFE-e1428672788656.gif" alt=""></a>
+                                                                    <a href="{{ path('bugPage') }}"><img src="assets/images/06-GIRAFFE-e1428672788656.gif" alt=""></a>
                                                                 </div>
                                                                 <div class="right-content align-self-center">
-                                                                    <a href="bugPage.html">
+                                                                    <a href="{{ path('bugPage') }}">
                                                                         <h4>Bug trouvé</h4>
                                                                     </a>
                                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ak incididunt ut labore et dolore magna aliqua.</p>
@@ -149,10 +149,10 @@
                                                         <div class="col-lg-4">
                                                             <div class="listing-item">
                                                                 <div class="left-image">
-                                                                    <a href="bugPage.html"><img src="assets/images/8472099860_8f2192c54a_b.jpg" alt=""></a>
+                                                                    <a href="{{ path('bugPage') }}"><img src="assets/images/8472099860_8f2192c54a_b.jpg" alt=""></a>
                                                                 </div>
                                                                 <div class="right-content align-self-center">
-                                                                    <a href="bugPage.html">
+                                                                    <a href="{{ path('bugPage') }}">
                                                                         <h4>Bug trouvé</h4>
                                                                     </a>
                                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ak incididunt ut labore et dolore magna aliqua.</p>
@@ -162,10 +162,10 @@
                                                         <div class="col-lg-4">
                                                             <div class="listing-item">
                                                                 <div class="left-image">
-                                                                    <a href="bugPage.html"><img src="assets/images/divers-jeux-video-5195144b841cb.jpg" alt=""></a>
+                                                                    <a href="{{ path('bugPage') }}"><img src="assets/images/divers-jeux-video-5195144b841cb.jpg" alt=""></a>
                                                                 </div>
                                                                 <div class="right-content align-self-center">
-                                                                    <a href="bugPage.html">
+                                                                    <a href="{{ path('bugPage') }}">
                                                                         <h4>Bug trouvé</h4>
                                                                     </a>
                                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ak incididunt ut labore et dolore magna aliqua.</p>
@@ -175,10 +175,10 @@
                                                         <div class="col-lg-4">
                                                             <div class="listing-item">
                                                                 <div class="left-image">
-                                                                    <a href="bugPage.html"><img src="assets/images/lessims-1-1024x614.jpg" alt=""></a>
+                                                                    <a href="{{ path('bugPage') }}"><img src="assets/images/lessims-1-1024x614.jpg" alt=""></a>
                                                                 </div>
                                                                 <div class="right-content align-self-center">
-                                                                    <a href="bugPage.html">
+                                                                    <a href="{{ path('bugPage') }}">
                                                                         <h4>Bug trouvé</h4>
                                                                     </a>
                                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ak incididunt ut labore et dolore magna aliqua.</p>
