--- a/templates/pages/addGame.html.twig
+++ b/templates/pages/addGame.html.twig
@@ -35,16 +35,6 @@
               <label for="gamePublicationYear">Année de publication:</label>
               <input type="number" class="inputBugForm" name="gamePublicationYear" required>
              </div>
-             <div class="col-lg-12 bugInsideFormSpaces">
-              <label for="bugRating">Bug rating :</label>
-              <select class="searchFormPage inputBugForm" name="bugRating" id="bugRating" required>
-               <option value="1">1 (énormément de bugs)</option>
-               <option value="2">2 (beaucoup de bugs)</option>
-               <option value="3">3 (quantité modérée de bugs)</option>
-               <option value ="4">4 (peu de bugs)</option>
-               <option value ="5">5 (aucun ou pratiquement pas de bugs)</option>
-              </select>
-             </div>
 
              <div class="col-lg-12 bugInsideFormSpaces">
               <label for="gameEditor">Editeur du jeu:</label>
@@ -56,7 +46,7 @@
               </select>
              </div>
              <div class="col-lg-12 bugInsideFormSpaces">
-              <p class="textAddGame">Vous ne trouvez pas l'éditeur correspondant ? <a href="addEditor.html">Ajoutez-le !</a></p>
+              <p class="textAddGame">Vous ne trouvez pas l'éditeur correspondant ? <a href="{{ path('editorCreationPage') }}">Ajoutez-le !</a></p>
              </div>
 
             </fieldset>
