--- a/templates/pages/creationBug.html.twig
+++ b/templates/pages/creationBug.html.twig
@@ -35,7 +35,7 @@
               </select>
              </div>
              <div class="col-lg-12 bugInsideFormSpaces">
-              <p class="textAddGame">Le jeu concerné n'est pas dans la liste ? <a href="addGame.html">Ajoutez-le !</a></p>
+              <p class="textAddGame">Le jeu concerné n'est pas dans la liste ? <a href="{{ path('gameCreationPage') }}">Ajoutez-le !</a></p>
              </div>
             </fieldset>
            </div>
@@ -52,7 +52,7 @@
              </div>
              <div class="col-lg-12 bugInsideFormSpaces">
               <label for="bugIntroText">Texte intro bug:</label>
-              <input type="text" class="inputBugForm" class="inputBugForm" name="bugIntroText" required>
+              <input type="text" class="inputBugForm" name="bugIntroText" required>
              </div>
              <div class="col-lg-12 bugInsideFormSpaces">
               <label for="bugImage">Image bug:</label>
