--- a/templates/pages/profile.html.twig
+++ b/templates/pages/profile.html.twig
@@ -22,7 +22,7 @@
                                 <img src="assets/images/user_icon.png" alt="">
                                 <form id="changeProfile-form" name="gs" method="submit" role="search" action="#">
                                     <fieldset>
-                                        <button class="main-button">Modifier</button>
+                                        <button class="main-button btn btn-primary">Modifier</button>
                                     </fieldset>
                                 </form>
                             </div>
