--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,12 +10,12 @@
             <link rel="preconnect" href="https://fonts.gstatic.com">
             <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
             <!-- Bootstrap core CSS -->
-            <link href="{{ 'vendor/bootstrap/css/bootstrap.min.css' }}" rel="stylesheet">
+            <link href="{{ asset('vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
             <!-- Additional CSS Files -->
-            <link rel="stylesheet" href="{{ 'assets/css/fontawesome.css' }}">
-            <link rel="stylesheet" href="{{ 'assets/css/templatemo-plot-listing.css' }}">
-            <link rel="stylesheet" href="{{ 'assets/css/animated.css' }}">
-            <link rel="stylesheet" href="{{ 'assets/css/owl.css' }}">
+            <link rel="stylesheet" href="{{asset('assets/css/fontawesome.css')}}">
+            <link rel="stylesheet" href="{{ asset('assets/css/templatemo-plot-listing.css') }}">
+            <link rel="stylesheet" href="{{ asset('assets/css/animated.css') }}">
+            <link rel="stylesheet" href="{{ asset('assets/css/owl.css') }}">
 
         {% endblock %}
         <script src="https://kit.fontawesome.com/53244cad5b.js" crossorigin="anonymous"></script>
@@ -122,12 +122,12 @@
             {% endblock %}
         {% endblock %}
         {% block javascripts %}
-            <script src="{{ 'vendor/jquery/jquery.min.js' }}"></script>
-            <script src="{{ 'vendor/bootstrap/js/bootstrap.bundle.min.js' }}"></script>
-            <script src="{{ 'assets/js/owl-carousel.js' }}"></script>
-            <script src="{{ 'assets/js/animation.js' }}"></script>
-            <script src="{{ 'assets/js/imagesloaded.js' }}"></script>
-            <script src="{{ 'assets/js/custom.js' }}"></script>
+            <script src="{{ asset('vendor/jquery/jquery.min.js') }}"></script>
+            <script src="{{ asset('vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+            <script src="{{ asset('assets/js/owl-carousel.js') }}"></script>
+            <script src="{{ asset('assets/js/animation.js') }}"></script>
+            <script src="{{ asset('assets/js/imagesloaded.js') }}"></script>
+            <script src="{{ asset('assets/js/custom.js') }}"></script>
 
         {% endblock %}
     </body>
